# scroadmap

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
client/: Cargo.toml  build.ps1  setup.ps1
client/src/: lib.rs  main.rs  payload.rs
client/static/: 1532669929.bin.br  client.d.ts  client.js  client_bg.wasm  client_ugly.js  index.html  index.js  package-lock.json  package.json
converter/: Cargo.toml
converter/src/: main.rs
fetcher/: Cargo.toml
fetcher/payloads/: 1532669929.json  1534559969.bin.br  1535145992.json  1535764338.bin.br  1536951980.json  1538161747.bin.br  1538161747.json  1538766582.bin.br  1539372944.json  1539977010.json  1540580901.bin.br  1540580901.json  1541812879.bin.br  1541812879.json
fetcher/src/: main.rs
payload/: Cargo.toml
payload/src/: lib.rs
payloads/: 1531500596.bin.br  1531500596.bin.cmp  1531500596.json  1531500596.json.cmp  1532021055.bin.br  1532021055.bin.cmp  1532021055.json  1532021055.json.cmp  1532109829.bin.br  1532109829.json  1532669929.bin.br  1534559969.bin.br  1535145992.bin.br  1535764338.bin.br  1536354157.bin.br  1536354157.json  1536951980.bin.br  1537559695.bin.br  1538161747.bin.br  1538766582.bin.br  1539372944.bin.br  1539977010.bin.br  1540580901.bin.br  1541185736.bin.br  1541185736.json  1541812879.bin.br  1541812879.json  1542402813.bin.br  1542402813.json  1542987005.bin.br  1542987005.json  1543625405.bin.br  1543625405.json  1544232249.bin.br  1544232249.json  1544820523.bin.br  1544820523.json  1545422968.bin.br  1545422968.json  1547238196.bin.br  (+177 more)
payloads/sq42/: 1545327953.bin.br  1545327953.json  1547237234.bin.br  1547237234.json  1547843072.bin.br  1547843072.json  1548452499.bin.br  1548452499.json  1549062437.bin.br  1549062437.json  1549063485.bin.br  1549063485.json  1549663271.bin.br  1549663271.json  1549675404.bin.br  1549675404.json  1550263496.bin.br  1550263496.json  1550870556.bin.br  1550870556.json  1551471445.bin.br  1551471445.json  1552081796.bin.br  1552081796.json  1552681657.bin.br  1552681657.json  1553297145.bin.br  1553297145.json  1554509025.bin.br  1554509025.json  1554509197.bin.br  1554509197.json  (+86 more)
service/: Cargo.toml
service/payloads/: 1531500596.bin.br  1532109829.bin.br  1532669929.bin.br  1532669929.json  1534559969.json  1535145992.bin.br  1535145992.json  1535764338.json  1536951980.bin.br  1537559695.bin.br  1537559695.json  1538766582.json  1539372944.bin.br  1539977010.bin.br
service/src/: lib.rs  main.rs  payload.rs
src/: bin.rs  json.rs  lib.rs  main.rs  payload.rs
util/: Cargo.toml
(+1 files in other folders)
