[package]
edition = "2018"
name = "scroadmap"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[workspace]
members = [
    "client",
    "converter",
    "fetcher",
    "util",
]

[dependencies]
bincode = "1.0.1"
brotli = "3.1.8"
serde = { version = "1.0.85", features = ["derive"] }
