[package]
edition = "2018"
name = "scroadmap"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[workspace]
members = [
    "client",
    "converter",
    "fetcher",
    "util",
]

[dependencies]
bincode = "1.1.2"
brotli = "3.3.0"
serde = { version = "1.0.90", features = ["derive"] }
