[package]
edition = "2018"
name = "client"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.25"
js-sys = "0.3.2"
scroadmap = { path = "../" }
wasm-bindgen = "0.2.25"
wasm-bindgen-futures = "0.3.2"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]
