[package]
edition = "2018"
name = "client"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
js-sys = "0.3"
scroadmap = { path = "../" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]
