[package]
name = "scroadmap"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[workspace]

[dependencies]
actix-web = { version = "0.7.1", default-features = false }
bincode = "1.0.1"
brotli = "2.5.0"
reqwest = "0.8.6"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
